--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Welcome to the landing page!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css" type="text/css"/>
+    <link rel="icon" href="./img/logo-512.png"" sizes="32x32" />
+    <link rel="icon" href="./img/logo-512.png" sizes="192x192" />
+    <link rel="apple-touch-icon-precomposed" href="./img/logo-512.png" />
+    <meta name="msapplication-TileImage" content="./img/logo-512.png" />
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
+    <title>Deadwatch Support</title>
+</head>
+<body>
+    <div class="hero_section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-ms-12 col-xs-12">
+                    <h3>Hello!</h3>
+                    <h1>Deadwatch Support</h1>
+                    <h2>Need help with something?</h2>
+					<p>If you've encountered a bug simply tap the top center of the screen at any time to send a bug report, or email support at huskyinteractive.deadwatch@gmail.com.</p>
+					<p>If you have an idea for a game, features for this game, or just want to stop by, feel free to reach out at the email above :)</p>
+					<br>
+					<p>I hope you enjoy playing Deadwatch!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="particles-js"></div>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script>
+        particlesJS.load('particles-js', 'particles.json',
+        function(){
+            console.log('particles.json loaded...')
+        })
+    </script>   
+    <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="./js/particles.js"></script>
+
+</body>
+</html>
+                                                          
